# Experience

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: version.rc.in
include/: ExperienceAPI.h
src/: Console.cpp  Console.h  Experience.cpp  Experience.h  HUD.cpp  HUD.h  HUDInjector.cpp  HUDInjector.h  Injector.cpp  Injector.h  Main.cpp  ModAPI.cpp  ModAPI.h  Offsets.h  PCH.h  Papyrus.cpp  Papyrus.h  Serialization.cpp  Serialization.h  Settings.cpp  Settings.h  Translation.cpp  Translation.h
src/Events/: ActorKill.cpp  ActorKill.h  BooksRead.cpp  BooksRead.h  LocationCleared.cpp  LocationCleared.h  LocationDiscovery.cpp  LocationDiscovery.h  ObjectiveState.cpp  ObjectiveState.h  QuestStatus.cpp  QuestStatus.h  SkillIncrease.cpp  SkillIncrease.h
src/Hooks/: Actor.cpp  Actor.h  BGSLocation.cpp  BGSLocation.h  PlayerSkills.cpp  PlayerSkills.h  TrainingMenu.cpp  TrainingMenu.h
src/Settings/: SettingField.cpp  SettingField.h  Settings.cpp  Settings.h
src/Skyrim/: BookRead.cpp  BookRead.h  HUDMenu.cpp  HUDMenu.h  LocationCleared.cpp  ObjectiveState.cpp  QuestStatus.cpp  StatsMenu.cpp  StatsMenu.h
src/Utils/: DirectoryParser.h  GameSettings.h  SafeQueue.h  Singleton.h
